# EazyPredictAI

./: AUTHORS.md  HISTORY.md  LICENSE.txt  README.md  requirements.txt  setup.cfg
src/eazypredict/: EazyClassifier.py  EazyRegressor.py  __init__.py
