[metadata]
name = eazypredict
version = 0.2.0
author = Harshavardhan M
author_email = harsha7vardhan@gmail.com
description = A python module to experiment with a bunch of machine learning algorithms on a preprocessed dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codevardhan/EazyPredict
project_urls =
    Bug Tracker = https://github.com/codevardhan/EazyPredict/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
